...
  List<BottomNavigationBarItem> _buildBuyerItems() {
    return [
      // Recherche
      const BottomNavigationBarItem(
        icon: Icon(CupertinoIcons.search),
        activeIcon: Icon(CupertinoIcons.search_circle_fill),
        label: 'Recherche',
      ),

      // Favoris
      const BottomNavigationBarItem(
        icon: Icon(CupertinoIcons.heart),
        activeIcon: Icon(CupertinoIcons.heart_fill),
...
